--- a/FastPARsStream/ISS_Settings.ini
+++ b/FastPARsStream/ISS_Settings.ini
@@ -1,8 +1,8 @@
 [Acquisition]
 Mode=Quad
 SampleRate=200000000
-Depth=20000000
-SegmentSize=20000000
+Depth=1280
+SegmentSize=1280
 SegmentCount=1
 TriggerHoldOff=0
 TriggerTimeout=0
@@ -11,17 +11,17 @@ TimeStampClock=Sample
 ExtClk=0
 
 [Channel1]
-Range=20000
+Range=10000
 Coupling=AC
-Impedance=1000000
+Impedance=50		
 
 [Channel2]
-Range=2000
+Range=400
 Coupling=DC
 Impedance=1000000
 
 [Channel3]
-Range=2000
+Range=400
 Coupling=DC
 Impedance=1000000
 
