--- a/FastPARsStream/ISS_Settings.ini
+++ b/FastPARsStream/ISS_Settings.ini
@@ -1,8 +1,8 @@
 [Acquisition]
 Mode=Quad
 SampleRate=200000000
-Depth=1280
-SegmentSize=1280
+Depth=10000000
+SegmentSize=10000000
 SegmentCount=1
 TriggerHoldOff=0
 TriggerTimeout=0
